docker-demos/kuberenetes-test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: liferay.kubernetes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liferay--cluster
                port:
                  number: 8080
